--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login" />
-        <activity android:name=".RegistrationActivity" />
+        <activity android:name=".Registration" />
         <activity android:name=".HomePage" />
         <activity android:name=".Top50" />
         <activity android:name=".MyCalendar" />
