--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,14 @@ android:
     - build-tools-26.0.2
     - android-26
 
-script: ./gradlew build
+script: "./gradlew build"
+
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -rf $HOME/.gradle/caches/*/plugin-resolution
+
+cache:
+  directories:
+    - $HOME/.gradle/caches
+    - $HOME/.gradle/wrapper
+    - $HOME/.android/build-cache
