--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ deploy:
   file:
     - "Android/app/build/outputs/apk/debug/app-debug.apk"
     - "Android/app/build/outputs/apk/release/app-release-unsigned.apk"
+    - "Android/app/build/reports/lint-results.html"
   skip_cleanup: true
   on:
     repo: gtny152/7304-BARD
