--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -27,12 +27,12 @@
             android:label="@string/title_activity_login" />
         <activity android:name=".Registration" />
         <activity android:name=".HomePage" />
-        <activity android:name=".Top50" />
+        <activity android:name=".Top50_" />
         <activity android:name=".MyCalendar" />
         <activity android:name=".Planner" />
         <activity android:name=".NewMeeting" />
         <activity android:name=".Watchlist" />
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".SearchActivity" />
     </application>
 
 </manifest>
