--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile 'android.arch.persistence.room:runtime:1.0.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
     compile 'com.android.support:design:26.+'
     compile 'org.androidannotations:androidannotations-api:4.4.0'
     compile 'org.jsoup:jsoup:1.11.2'
