--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -32,9 +32,9 @@ dependencies {
     annotationProcessor 'org.androidannotations:androidannotations:4.4.0'
     compile 'android.arch.persistence.room:runtime:1.0.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
-    compile 'com.android.support:design:26.+'
+    compile 'com.android.support:design:26.1.0'
     compile 'org.androidannotations:androidannotations-api:4.4.0'
     compile 'org.jsoup:jsoup:1.11.2'
     testCompile 'junit:junit:4.12'
