--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity android:name=".MyCalendar" />
         <activity android:name=".Planner" />
         <activity android:name=".NewMeeting" />
-        <activity android:name=".Watchlist" />
+        <activity android:name=".Watchlist_" />
         <activity android:name=".SearchActivity_" />
     </application>
 
