display Tournament data

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name=".NewMeeting_" />
         <activity android:name=".Watchlist_" />
         <activity android:name=".SearchActivity_" />
-        <activity android:name=".Tournaments"></activity>
+        <activity android:name=".Tournaments_"></activity>
     </application>
 
 </manifest>
