trying to get firebase working

--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -39,4 +39,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'org.jsoup:jsoup:1.11.2'
     testImplementation 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
+
 }
+apply plugin: 'com.google.gms.google-services'
