--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.3"
     defaultConfig {
         applicationId "baseballRecruitment.jd"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.firebaseui:firebase-ui-auth:3.2.2'
 
 }
 apply plugin: 'com.google.gms.google-services'
